--- a/.project
+++ b/.project
@@ -6,7 +6,7 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.wst.validation.validationbuilder</name>
+			<name>org.eclipse.wst.validation.validationbuilders</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
